# MatchBox

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.py  download_clips.py  generate_admin_hash.py  local_video_processor.py  matchbox-cli.py  matchbox-sync.py  matchbox.py  matchbox.spec  pyproject.toml  requirements.txt  setup.py  us.brainstormz.MatchBox.icns
.github/workflows/: pyinstaller.yml
pi-server/: relay_server.py
typings/obswebsocket/: __init__.pyi  base_classes.pyi  core.pyi  exceptions.pyi
web_admin/: admin.css  admin.js  index.html
web_admin/obs-web/: index.html
web_admin/obs-web/_app/: version.json
web_admin/obs-web/_app/immutable/: bundle.DSuCS62U.js
web_api/: __init__.py  handler.py  websocket_server.py  ws_tunnel_client.py
