[build-system]
requires = ["setuptools>69", "setuptools-scm>8"]
build-backend = "setuptools.build_meta"
[project]
name = "MatchBox"
dynamic = ["dependencies", "version"]
description = "FIRST® MatchBox™"
readme = "README.md"
license = "MIT"
keywords = ["ftc", "first", "robotics", "obs", "streaming", "video", "autosplit", "websocket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
]
[project.urls]
Homepage = "https://github.com/FTCTeam10298/MatchBox"
Repository = "https://github.com/FTCTeam10298/MatchBox.git"
Issues = "https://github.com/FTCTeam10298/MatchBox/issues"
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
#[tool.setuptools]
#packages = ["MatchBox"]
#[tool.setuptools.package-data]
#MatchBox = ["us.brainstormz.MatchBox.png","us.brainstormz.MatchBox.Devel.png"]
#[project.gui-scripts]
#matchbox = "MatchBox.__main__:initwindow"
[tool.setuptools_scm]
local_scheme = "no-local-version"
version_file = "_version.py"
